# The Eo9 bare-metal kernel (area 12: aarch64 and riscv64 on QEMU `virt`).
#
# Build and run it via xtask — `cargo xtask build-kernel <arch>` and `cargo xtask qemu
# <arch>` — which supply the target, the linker script, and (for the `wasm-*` features)
# the host-precompiled artifacts. A plain host build (as done by `cargo test` in this
# workspace) compiles to a stub binary so the workspace stays testable on the host triple.
[package]
name = "eo9-kernel"
description = "Eo9 bare-metal kernel: boot, serial, heap, timer, kernel-side eo9 root providers, and a wasmtime-based runner for precompiled components on QEMU virt (aarch64, riscv64 in progress)."
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
# Embed the host-precompiled seed wasm component (built by `cargo xtask build-kernel
# aarch64`, passed in via the EO9_SEED_CWASM environment variable) and run it at boot.
wasm-seed = ["dep:wasmtime"]
# Embed the host-precompiled eo9-example-hello program (EO9_HELLO_CWASM) and run it at
# boot against the kernel's root providers: text -> PL011 serial, time -> generic timer +
# PL031 RTC, entropy -> counter-seeded splitmix64.
wasm-hello = ["dep:wasmtime"]
# Embed the host-precompiled async artifacts (EO9_SLEEPY_CWASM — the kernel-local async
# canary that awaits `eo9:time/time.sleep` — and EO9_ENTROPY_SEEDED_CWASM — the unmodified
# `entropy.seeded` stub from the guest workspace, whose `configure` export uses the async
# canonical ABI) and run them at boot through the component-model-async machinery.
wasm-async = ["dep:wasmtime"]
# Embed the read-only store image assembled by xtask (EO9_STORE_IMAGE: shell-named
# components plus their host-AOT artifacts) and the headless runner that the kernel
# command line's `program=<name> [arg=value …]` selects from.
wasm-store = ["dep:wasmtime"]
# On-target codegen (plan/12 Decisions 26–28): compile WebAssembly into native aarch64 on the
# machine itself, via Cranelift + the wasmtime compile layers built no_std (see
# kernel/vendor). Off by default so `cargo xtask ci` (featureless kernel) stays lean.
# Also links the no_std component algebra (eo9-component) so the shell can compose ($/&/
# only/configure) and compile the fused result on-target (plan/12 Decisions 30–35).
wasm-codegen = ["dep:wasmtime", "wasmtime/cranelift", "dep:eo9-component"]

# These dependencies are only used by the real bare-metal build; host-triple builds (unit
# tests, `cargo check` without --target) compile the stub entry point and need neither.
# `async` + `component-model-async` come from the patched vendor/wasmtime copy (the
# upstream feature graph requires `std` for component-model-async; see vendor/README.md).
[target.'cfg(target_os = "none")'.dependencies]
linked_list_allocator = { workspace = true }
wasmtime = { workspace = true, optional = true, features = [
    "runtime",
    "component-model",
    "async",
    "component-model-async",
] }
# The component algebra, built no_std (its dependency closure is redirected to the de-std'd
# vendored copies by this workspace's [patch.crates-io]). Only linked under `wasm-codegen`,
# since composing on metal requires the on-target compiler.
eo9-component = { path = "../../crates/eo9-component", default-features = false, optional = true }
