[package]
name = "eo9-try-build"
version = "0.1.0"
edition = "2021"
publish = false
description = "Build-time helper for the eo9.org /try page: transpiles eo9 guest components into browser-runnable modules and writes the launcher manifest."

# Deliberately its own workspace (like www/ itself is its own package outside the root
# workspace): the transpiler dependency tree (js-component-bindgen and friends) must never
# enter the OS dependency tree, and must not slow down the eo9-www server's own build/test.
[workspace]

[dependencies]
# The transpiler core used by jco (Bytecode Alliance), as a library — pinned to the version
# validated in plan/15-website.md. Approved dependency for this helper only.
js-component-bindgen = "=1.19.3"
# Component decoding for the launcher manifest (same wasm-tools family/version the repo pins).
wit-component = "0.250.0"
wit-parser = "0.250.0"
anyhow = "1"
serde_json = "1"
