[package]
name = "eo9-coreutil-rng"
description = "Eo9 coreutil: print N random u64s, one per line (eo9:entropy + eo9:text)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# A core wasm module that `cargo xtask build-guest` turns into a component.
crate-type = ["cdylib"]

[dependencies]
eo9-guest = { workspace = true }
wit-bindgen = { workspace = true }
