[package]
name = "eo9-coreutil-touch"
description = "Eo9 coreutil: create an empty file if absent (eo9:fs)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# A core wasm module that `cargo xtask build-guest` turns into a component.
crate-type = ["cdylib"]

[dependencies]
eo9-guest = { workspace = true }
wit-bindgen = { workspace = true }
