[package]
name = "eo9-coreutil-wc"
description = "Eo9 coreutil: count lines, words, and bytes of a file (eo9:fs + eo9:text)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# A core wasm module that `cargo xtask build-guest` turns into a component.
crate-type = ["cdylib"]

[dependencies]
eo9-guest = { workspace = true }
wit-bindgen = { workspace = true }
